[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/room_instance.gd" type="Script" id=1]
[ext_resource path="res://scripts/rooms/house3.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/glass.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/rooms/house3.png" type="Texture" id=4]
[ext_resource path="res://scenes/polygon_object_button_template.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/cat_house_1.png" type="Texture" id=6]
[ext_resource path="res://scripts/char_obj_button.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/cat_house_2.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/cat_house_3.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/cat_house_paw_1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/cat_house_paw_2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/cat_house_paw_3.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/cup.png" type="Texture" id=13]
[ext_resource path="res://scenes/exit_left.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]
resource_name = "glass_push"
length = 1.6
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("house_cat/cat_house_paw:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.21, 0.33, 1.6 ),
"transitions": PoolRealArray( 1, 1, 0.233259, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 27.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("house_glass:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.31, 0.39, 0.46, 0.54, 0.71 ),
"transitions": PoolRealArray( 1, 1, 1, 0.870551, 1, 1 ),
"update": 0,
"values": [ Vector2( 646.436, 584.38 ), Vector2( 646.436, 584.38 ), Vector2( 629.336, 584.38 ), Vector2( 615.565, 597.674 ), Vector2( 598.822, 633.91 ), Vector2( 545.85, 790.64 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("house_glass:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.39, 0.7 ),
"transitions": PoolRealArray( 1, 0.965936, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -100.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("shatter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.71 )
}

[node name="room_instance" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="state_handler" type="Control" parent="."]
script = ExtResource( 2 )
default_music = "The_Warehouse"

[node name="ColorRect" type="ColorRect" parent="state_handler"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2

[node name="glass_animation" type="AnimationPlayer" parent="state_handler"]
anims/glass_push = SubResource( 1 )

[node name="bg" type="Sprite" parent="state_handler"]
position = Vector2( -91.7212, 303.915 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 91.7212, -319.915 )

[node name="house_cat" parent="state_handler" instance=ExtResource( 5 )]
position = Vector2( 2.88776, -5.9762 )
dialog_label = " house_cat"
sprite_path = [ null ]

[node name="cat_house" type="TextureButton" parent="state_handler/house_cat"]
margin_left = 645.462
margin_top = 407.612
margin_right = 801.462
margin_bottom = 600.612
mouse_filter = 2
texture_normal = ExtResource( 6 )
script = ExtResource( 7 )
animation0 = ExtResource( 6 )
animation1 = ExtResource( 8 )
animation2 = ExtResource( 9 )

[node name="cat_house_paw" type="TextureButton" parent="state_handler/house_cat"]
margin_left = 681.541
margin_top = 524.172
margin_right = 837.541
margin_bottom = 717.172
mouse_filter = 2
texture_normal = ExtResource( 10 )
script = ExtResource( 7 )
animation0 = ExtResource( 10 )
animation1 = ExtResource( 11 )
animation2 = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/house_cat"]
polygon = PoolVector2Array( 658.088, 407.787, 655.244, 462.392, 658.657, 474.337, 670.033, 478.318, 664.913, 510.74, 671.739, 576.721, 663.776, 591.509, 666.051, 598.335, 689.941, 606.298, 723.5, 604.023, 790.049, 579.565, 807.113, 557.95, 789.48, 548.281, 756.49, 555.675, 714.968, 475.474, 734.876, 416.319, 700.748, 424.282, 677.996, 418.594, 660.363, 403.806 )

[node name="house_glass" parent="state_handler" instance=ExtResource( 5 )]
position = Vector2( 646.436, 584.38 )
dialog_label = "house_glass"

[node name="cup" type="Sprite" parent="state_handler/house_glass"]
position = Vector2( -0.747314, 0.128662 )
texture = ExtResource( 13 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/house_glass"]
position = Vector2( -586.875, -488.284 )
polygon = PoolVector2Array( 565.96, 467.67, 572.217, 508.624, 584.731, 513.743, 604.07, 510.33, 604.07, 470.514, 590.419, 461.982 )

[node name="exit" parent="state_handler" instance=ExtResource( 14 )]
room_label = "house2"

[node name="object" parent="state_handler" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -16 )
dialog_label = "house_lamp"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/object"]
polygon = PoolVector2Array( 89.8021, 166.852, 90.3028, 234.194, 160.9, 239.201, 163.403, 168.354 )

[node name="object2" parent="state_handler" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -16 )
dialog_label = "house_stool"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/object2"]
position = Vector2( -0.663422, 0 )
polygon = PoolVector2Array( 177.243, 637.058, 189.783, 641.937, 216.984, 580.902, 234.896, 672.454, 252.145, 671.791, 269.394, 575.594, 304.555, 632.649, 312.747, 628.235, 285.016, 493.361, 293.246, 450.159, 228.266, 438.426, 176.823, 460.989, 195.801, 507.051 )

[node name="object3" parent="state_handler" instance=ExtResource( 5 )]
position = Vector2( 0, -16 )
dialog_label = "broken_glasses"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/object3"]
position = Vector2( 0, 0.949951 )
polygon = PoolVector2Array( 367.301, 594.102, 463.252, 725.202, 445.186, 743.733, 376.801, 724.252, 327.401, 690.052, 280.851, 685.302, 276.101, 670.102, 304.601, 651.102, 317.901, 602.652 )

[node name="object7" parent="state_handler" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -16 )
dialog_label = "toaster"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/object7"]
polygon = PoolVector2Array( 472.235, 376.069, 467.948, 423.225, 501.385, 436.943, 563.974, 428.369, 563.974, 377.784, 532.251, 370.925 )

[node name="object8" parent="state_handler" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -16 )
dialog_label = "toaster"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/object8"]
polygon = PoolVector2Array( 582.836, 377.784, 581.002, 412.001, 565.118, 416.086, 565.118, 426.919, 601.699, 423.225, 605.128, 376.069 )

[node name="object10" parent="state_handler" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -16 )
dialog_label = "house_sink"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/object10"]
polygon = PoolVector2Array( 607.351, 413.481, 662.737, 427.328, 790.615, 417.554, 721.382, 402.078, 690.431, 402.078, 677.428, 384.613, 702.589, 371.931, 687.002, 347.001, 660.577, 347.925, 651.334, 367.869, 648.076, 389.046, 630.971, 406.965 )

[node name="object12" parent="state_handler" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -16 )
dialog_label = "house_window"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/object12"]
polygon = PoolVector2Array( 1069.15, 216.182, 1072.83, 374.56, 1217.7, 391.749, 1216.48, 195.31 )

[node name="object13" parent="state_handler" instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 0, -16 )
dialog_label = " house_cabinets"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="state_handler/object13"]
polygon = PoolVector2Array( 354.602, 100.774, 358.285, 261.608, 576.823, 270.202, 648.032, 251.786, 651.715, 218.637, 721.696, 226.004, 722.924, 264.064, 845.698, 275.113, 956.195, 270.202, 954.967, 127.784, 402.484, 34.4761 )

[node name="shatter" type="AudioStreamPlayer" parent="state_handler"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="glass_cover" type="Button" parent="state_handler"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
[connection signal="animation_finished" from="state_handler/glass_animation" to="state_handler" method="_on_glass_animation_animation_finished"]
[connection signal="pressed" from="state_handler/glass_cover" to="state_handler" method="_on_glass_cover_pressed"]
